--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,9 @@ body {
   overflow: hidden;
 }
 
-body {
-  /* background-color: #000; */
-}
 
 div#root {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   overflow: hidden;
 }
