Working fully dynamically

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
-/* html,
+html,
 body {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
-} */
-/* 
+  overflow-x: hidden;
+}
+
 div#root {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+}
+/* 
+* {
+  box-sizing: border-box;
 } */
